Fix parallax scrolling on safari

--- a/css/style.css
+++ b/css/style.css
@@ -165,11 +165,16 @@ footer > a > i {
 }
 
 #maincontainer {
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
 	perspective: 1px;
 	transform-style: preserve-3d;
-	height: 100vh;
 	overflow-x: hidden;
 	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
 }
 
 #contentcontainer {
@@ -178,7 +183,7 @@ footer > a > i {
 	z-index: 1;
 	background-color: #eee;
 	top: 270px;
-	-webkit-overflow-scrolling: touch;
+	overflow: hidden;
 }
 
 #menubutton {
@@ -237,7 +242,6 @@ footer > a > i {
 
 #homephoto {
 	width: 100%;
-	background-color: #555555;
 	background-image: url(../img/temp.jpg);
 	background-size: 100%;
 	background-repeat: no-repeat;
@@ -246,9 +250,10 @@ footer > a > i {
 	display: flex;
 	flex: 1 0 auto;
 	position: relative;
-	height: inherit;
-	transform: translateZ(-5px) scale(6);
+	height: 100vh;
+	transform: translateZ(-2px) scale(3);
 	z-index: -1;
+	overflow: hidden;
 }
 
 #homephoto > h2 {
